remove janky dots

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -72,7 +72,7 @@ const pathname = new URL(Astro.request.url).pathname
                 <a href="/#top">Home</a>
             </li>
             <li>
-                <a href="https://www.npmjs.com/package/melonjs"
+                <a aria-label="NPM" href="https://www.npmjs.com/package/melonjs"
                     ><Icon icon="npm" alt="npm" class="inline no-bump"/>
                 </a>
             </li>
