--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,6 +53,17 @@ import Icon from '../components/Icon.astro';
         .jumbotron {
             background-color: $dark-gray !important;
         }
+        .display {
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            width: 100%;
+            li {
+                
+            }
+        }
         .row {
             display: flex;
             justify-content: space-between;
@@ -117,15 +128,15 @@ import Icon from '../components/Icon.astro';
                 text-shadow: none;
             }
         }
-        li {
-            > * {
-                display: inline-block;
+        ul:not(.display) {
+            li {
+                > * {
+                    display: inline-block;
+                }
+                margin: 2vmin 0;
+                width: 100%;
             }
-            margin: 2vmin 0;
-            width: 100%;
-            ul {
-                margin-left: 10vmin;
-            }
+            margin-left: 10vmin;
         }
         .table {
             text-align: center;
@@ -574,43 +585,55 @@ import Icon from '../components/Icon.astro';
             melonJS provides native integration and support for the following 3rd
             party tools :
             <br />
-            <ul>
-                <a href="https://www.mapeditor.org">
-                    <img
-                        alt="Tiled map editor"
-                        src="https://user-images.githubusercontent.com/4033090/136762999-5a7f377b-4136-4205-9fe0-83728c90cb9b.png"
-                    />
-                </a>
-                <a href="https://www.codeandweb.com/texturepacker">
-                    <img
-                        alt="TexturePacker"
-                        src="https://user-images.githubusercontent.com/4033090/136762472-bc55a638-c69b-4ff5-9d03-c684c8bea0ea.png"
-                    />
-                </a>
-                <a href="https://free-tex-packer.com">
-                    <img
-                        alt="Free Texture packer"
-                        src="https://user-images.githubusercontent.com/4033090/136762061-1d3a0dfe-dbe0-4d3d-808d-47a49ecf5309.png"
-                    />
-                </a>
-                <a href="https://www.codeandweb.com/physicseditor">
-                    <img
-                        alt="Physics Editor"
-                        src="https://user-images.githubusercontent.com/4033090/136762890-b1010c7f-cb19-4d35-a3f1-f5048db07835.png"
-                    />
-                </a>
-                <a href="https://renderhjs.net/shoebox/">
-                    <img
-                        alt="Shoebox"
-                        src="https://user-images.githubusercontent.com/4033090/136762705-92027d94-d87c-4a95-b051-26647410248d.png"
-                    />
-                </a>
-                <a href="https://cordova.apache.org">
-                    <img
-                        alt="Cordova"
-                        src="https://user-images.githubusercontent.com/4033090/136763147-6d157ce6-6921-437e-bb8f-0287b86109da.png"
-                    />
-                </a>
+            <ul class="display">
+                <li>
+                    <a href="https://www.mapeditor.org">
+                        <img
+                            alt="Tiled map editor"
+                            src="https://user-images.githubusercontent.com/4033090/136762999-5a7f377b-4136-4205-9fe0-83728c90cb9b.png"
+                        />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.codeandweb.com/texturepacker">
+                        <img
+                            alt="TexturePacker"
+                            src="https://user-images.githubusercontent.com/4033090/136762472-bc55a638-c69b-4ff5-9d03-c684c8bea0ea.png"
+                        />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://free-tex-packer.com">
+                        <img
+                            alt="Free Texture packer"
+                            src="https://user-images.githubusercontent.com/4033090/136762061-1d3a0dfe-dbe0-4d3d-808d-47a49ecf5309.png"
+                        />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.codeandweb.com/physicseditor">
+                        <img
+                            alt="Physics Editor"
+                            src="https://user-images.githubusercontent.com/4033090/136762890-b1010c7f-cb19-4d35-a3f1-f5048db07835.png"
+                        />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://renderhjs.net/shoebox/">
+                        <img
+                            alt="Shoebox"
+                            src="https://user-images.githubusercontent.com/4033090/136762705-92027d94-d87c-4a95-b051-26647410248d.png"
+                        />
+                    </a>
+                </li>
+                <li>
+                    <a href="https://cordova.apache.org">
+                        <img
+                            alt="Cordova"
+                            src="https://user-images.githubusercontent.com/4033090/136763147-6d157ce6-6921-437e-bb8f-0287b86109da.png"
+                        />
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="band">
