--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $desktop-width: 1080px;
 $dark-green: #6ba832;
 $green: #82c743;
 $light-green: #8de48d;
+$deep-green: #57b302;
 $jean: #77a4a9;
 $ocean: #337ab7;
 $cream: #efad72;
