another styling fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,7 +143,9 @@ import Icon from '../components/Icon.astro';
                 margin: 2vmin 0;
                 width: 100%;
             }
-            //margin-left: 10vmin;
+            ul {
+                margin-left: 10vmin;
+            }
         }
         .table {
             text-align: center;
