make text look better

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,7 @@ import Icon from '../components/Icon.astro';
                 margin-left: 0;
             }
             color: $black !important;
-            text-shadow: 1px 1px 0.4vmin #ffffffa3;
+            //text-shadow: 1px 1px 0.4vmin #ffffffa3;
             text-decoration: none;
             display: inline-block;
             padding: 2vmin;
