fit the page better

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ import Icon from '../components/Icon.astro';
             justify-content: space-between;
             width: 100%;
             li {
-                
+                width: fit-content;
             }
         }
         .row {
