improve deep linking

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -370,7 +370,7 @@ import Icon from '../components/Icon.astro';
 
         <div class="row two">
             <div>
-                <h2>Features<a id="features" class="anchor"></a></h2>
+                <h2 id="features"><a href="/#features" class="anchor">Features</a></h2>
                 <hr />
                 <ul>
                     <li>A fresh and lightweight 2D sprite-based engine</li>
@@ -449,7 +449,7 @@ import Icon from '../components/Icon.astro';
                     src="/img/icons/browser_icons.png"
                     alt="browser icons example"
                 />
-                <h2>Compatibility<a id="compatibility" class="anchor"></a></h2>
+                <h2 id="compatible"><a href="/#compatible" class="anchor">Compatibility</a></h2>
                 <hr />
                 <p>melonJS works with any full ES5/ES6 compatible browsers</p>
                 <table class="table browsers">
