make the tools display slightly prettier

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import Icon from '../components/Icon.astro';
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: space-around;
             width: 100%;
             li {
                 width: fit-content;
