add another deep link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -592,9 +592,8 @@ import Icon from '../components/Icon.astro';
         </div>
 
         <div>
-            <h3>
-                Third Party Tools Integration<a id="third-party" class="anchor"
-                ></a>
+            <h3 id="third-party">
+                <a href="/#third-party" class="anchor">Third Party Tools Integration</a>
             </h3>
             <hr />
             melonJS provides native integration and support for the following 3rd
