change to percent

--- a/src/styles/tutorial.scss
+++ b/src/styles/tutorial.scss
@@ -7,8 +7,8 @@
     }
   }
 @keyframes doshatter {
-    70% {
-        opacity: 0;
+    0%, 70% {
+        opacity: 0%;
     }
     90% {
         opacity: 100%;
