deploy the accesibility update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,7 +122,7 @@ import Icon from '../components/Icon.astro';
             margin: 2vmin 0.5vmin;
             border-radius: 2vmin;
             &.success {
-                background-color: $light-green;
+                background-color: $dark-green;
                 color: $black !important;
             }
             &.primary {
