fix styling issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -245,7 +245,7 @@ import Icon from '../components/Icon.astro';
             margin-bottom: 3vmin;
         }
         ul {
-            margin-top: 3vmin;
+            //margin-top: 3vmin;
         }
     </style>
     <main>
