fix text alignement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -336,22 +336,10 @@ import Icon from '../components/Icon.astro';
             <div>
                 <h2>Elegant</h2>
                 <blockquote>
+                    <p>Your scene graph is a hierarchy of containers.</p>
                     <ul>
-                        <li>
-                            <p>Your scene graph is a hierarchy of containers.</p>
-                        </li>
-                        <li>
-                            <p>
-                                Updates and drawing operations are dispatched
-                                separately.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Draws are opt-in; add compute-only renderable for
-                                AI, special effects, etc.
-                            </p>
-                        </li>
+                        <li><p>Updates and drawing operations are dispatched separately.</p></li>
+                        <li><p>Draws are opt-in; add compute-only renderable for AI, special effects, etc. </p></li>
                     </ul>
                 </blockquote>
             </div>
