add icons to the home page links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -274,7 +274,7 @@ import Icon from '../components/Icon.astro';
                                 class="btn primary"
                                 href="https://www.npmjs.com/package/melonjs"
                                 role="button"
-                                ><span class="glyphicon glyphicon-save"></span> Download
+                                ><Icon icon="download" inline/>Download
                             </a>
                         </li>
                         <li>
@@ -282,7 +282,7 @@ import Icon from '../components/Icon.astro';
                                 class="btn success"
                                 href="/tutorial"
                                 role="button"
-                                >Beginner's Tutorial
+                                ><Icon icon="flag" inline/>Beginner's Tutorial
                             </a>
                         </li>
                         <li>
@@ -290,7 +290,7 @@ import Icon from '../components/Icon.astro';
                                 class="btn danger"
                                 href="https://melonjs.github.io/examples/platformer/"
                                 role="button"
-                                >Demo
+                                ><Icon icon="film" inline/>Demo
                             </a>
                         </li>
                         <li>
@@ -298,7 +298,7 @@ import Icon from '../components/Icon.astro';
                                 class="btn default"
                                 href="https://melonjs.github.io/docs/"
                                 role="button"
-                                >Read The Docs &raquo;
+                                ><Icon icon="book-open" inline/>Read The Docs &raquo;
                             </a>
                         </li>
                     </ul>
