change the download link to the releases page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,7 +73,7 @@ import Icon from '../components/Icon.astro';
                         <li>
                             <a
                                 class="btn primary"
-                                href="https://www.npmjs.com/package/melonjs"
+                                href="https://github.com/melonjs/melonJS/releases"
                                 role="button"
                                 ><Icon icon="download" inline/>Download
                             </a>
