add the logo to the header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,7 +99,7 @@ import Icon from '../components/Icon.astro';
                                 class="btn default"
                                 href="https://melonjs.github.io/docs/"
                                 role="button"
-                                ><Icon icon="book-open" inline/>Read The Docs &raquo;
+                                ><Icon icon="book-open" inline/>Explore the API
                             </a>
                         </li>
                     </ul>
