--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -9,7 +9,7 @@ const pathname = new URL(Astro.request.url).pathname
     <nav>
         <ul>
             <li class={pathname === '/' ? 'active' : null}>
-                <a href="/#top">Home</a>
+                <a href="/#top"><Icon icon="favicon" inline/>Home</a>
             </li>
             <li>
                 <a aria-label="NPM" href="https://www.npmjs.com/package/melonjs"
