--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -50,7 +50,7 @@ header {
 .inline {
     height: 0.75em;
     &:not(.no-bump) {
-        margin: -0.25em 0.75em 0 0;
+        //margin: -0.25em 0.75em 0 0;
     }
     vertical-align: middle;
     &.big {
