--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,19 @@
 @import "variables";
 main {
+    .socials {
+        list-style: none;
+        display: flex;
+        font-size: 2.25em;
+        margin: 2.5vmin 0;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        li {
+            width: initial;
+        }
+        svg {
+            min-width: 33vmin;
+        }
+    }
     .computer {
         margin-top: 5vmin;
     }
