--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -7,6 +7,7 @@
     position: relative;
     max-width: 100%;
     overflow: hidden;
+    width: 100%;
     .main {
         &.loading {
             display: none;
