improve the desktop stypling of the footer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,9 +10,9 @@ main {
         li {
             width: initial;
         }
-        svg {
-            min-width: 33vmin;
-        }
+        // svg {
+        //     min-width: 33vmin;
+        // }
     }
     .computer {
         margin-top: 5vmin;
