rearrange the links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,10 +74,10 @@ import gallery from '../carousels/gallery.json'
                     <ul>
                         <li>
                             <a
-                                class="btn primary"
-                                href="https://github.com/melonjs/melonJS/releases"
+                                class="btn danger"
+                                href="https://melonjs.github.io/examples/platformer/"
                                 role="button"
-                                ><Icon icon="download" inline/>Download
+                                ><Icon icon="film" inline/>Demo
                             </a>
                         </li>
                         <li>
@@ -89,11 +89,9 @@ import gallery from '../carousels/gallery.json'
                             </a>
                         </li>
                         <li>
-                            <a
-                                class="btn danger"
-                                href="https://melonjs.github.io/examples/platformer/"
-                                role="button"
-                                ><Icon icon="film" inline/>Demo
+                            <a class="btn discord" href="https://discord.gg/aur7JMk" target="_blank"
+                            >
+                                <Icon icon="discord" class="inline"/>Join the Discord
                             </a>
                         </li>
                         <li>
@@ -102,6 +100,14 @@ import gallery from '../carousels/gallery.json'
                                 href="https://melonjs.github.io/docs/"
                                 role="button"
                                 ><Icon icon="book-open" inline/>Explore the API
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                class="btn primary"
+                                href="https://github.com/melonjs/melonJS/releases"
+                                role="button"
+                                ><Icon icon="download" inline/>Download
                             </a>
                         </li>
                     </ul>
