rename the link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,7 @@ import gallery from '../carousels/gallery.json'
                         <li>
                             <a class="btn discord" href="https://discord.gg/aur7JMk" target="_blank"
                             >
-                                <Icon icon="discord" class="inline"/>Join the Discord
+                                <Icon icon="discord" class="inline"/>Chat with Us
                             </a>
                         </li>
                         <li>
