fix the docs link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,7 @@ import gallery from '../carousels/gallery.json'
                         <li>
                             <a
                                 class="btn default"
-                                href="https://melonjs.github.io/docs/"
+                                href="https://melonjs.github.io/melonJS/docs/"
                                 role="button"
                                 ><Icon icon="book-open" inline/>Explore the API
                             </a>
