add missing link and update copyright

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -437,11 +437,13 @@ import gallery from '../carousels/gallery.json'
                     </a>
                 </li>
             </ul>
-            <p>&#169; AltByte Pte Ltd 2011-2022</p>
-            <img
-                src="https://user-images.githubusercontent.com/4033090/136692693-35dca8aa-5012-4a37-9ea2-51640d2e6d73.png"
-                alt="AltByte"
-            />
+            <p>&#169; AltByte Pte Ltd</p>
+            <p>
+                <a href="https://www.altbyte.com"><img
+                    src="https://user-images.githubusercontent.com/4033090/136692693-35dca8aa-5012-4a37-9ea2-51640d2e6d73.png"
+                    alt="AltByte"
+                /></a>
+            </p>
         </footer>
     </main>
 </BaseLayout>
